# gr-modified_tagged_file_sink

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh  workspace.code-workspace
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-modified_tagged_file_sink_moduleConfig.cmake
docs/: CMakeLists.txt  README.modified_tagged_file_sink_module
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: testModifiedTaggedFileSink.grc
grc/: CMakeLists.txt  modified_tagged_file_sink_module_modified_tagged_file_sink.block.yml
include/gnuradio/modified_tagged_file_sink_module/: CMakeLists.txt  api.h  modified_tagged_file_sink.h
lib/: CMakeLists.txt  modified_tagged_file_sink_impl.cc  modified_tagged_file_sink_impl.h
python/modified_tagged_file_sink_module/: CMakeLists.txt
python/modified_tagged_file_sink_module/bindings/: CMakeLists.txt  modified_tagged_file_sink_python.cc  python_bindings.cc
python/modified_tagged_file_sink_module/bindings/docstrings/: modified_tagged_file_sink_pydoc_template.h
